syntax = "proto3";

package pb;

option go_package = "github.com/tricong1998/go-ecom/cmd/user/pb";

message User {
  uint64 id = 1;
  string username = 2;
  string full_name = 3;
}